Update Khang CV index.html

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <li>
             <div class="member-entry">
                 <span class="member-name">Minh Khang</span>
-                <a href="../member3/index.html">
+                <a href="https://khanguth.github.io/MKhang-CV/">
                     <button class="go-btn" type="button">GO</button>
                 </a>
             </div>
