--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="member-entry member3">
                 <img class="member-avatar" src="https://ui-avatars.com/api/?name=Minh+Khang&background=f6deb8&color=a0522d" alt="Minh Khang Avatar">
                 <span class="member-name">Minh Khang</span>
-                <a href="https://khanguth.github.io/MKhang-CV/">
+                <a href="https://khanguth.github.io/Khang-CV/">
                     <button class="go-btn" type="button">GO</button>
                 </a>
             </div>
