--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="member-entry member1">
                 <img class="member-avatar" src="https://ui-avatars.com/api/?name=Quoc+An&background=f6deb8&color=a0522d" alt="Quốc An Avatar">
                 <span class="member-name">Quốc An</span>
-                <a href="../member1/index.html">
+                <a href="https://ananlq005.github.io/AnCV/">
                     <button class="go-btn" type="button">GO</button>
                 </a>
             </div>
@@ -23,7 +23,7 @@
             <div class="member-entry member2">
                 <img class="member-avatar" src="https://ui-avatars.com/api/?name=Gia+Bao&background=f6deb8&color=a0522d" alt="Gia Bảo Avatar">
                 <span class="member-name">Gia Bảo</span>
-                <a href="../member2/index.html">
+                <a href="https://bao1564.github.io/CV-BAO-PHAM/">
                     <button class="go-btn" type="button">GO</button>
                 </a>
             </div>
@@ -41,7 +41,7 @@
             <div class="member-entry member4">
                 <img class="member-avatar" src="https://ui-avatars.com/api/?name=Phuong+Vy&background=f6deb8&color=a0522d" alt="Phương Vy Avatar">
                 <span class="member-name">Phương Vy</span>
-                <a href="../member4/index.html">
+                <a href="https://phuongvy260905.github.io/CV-c-a-Vy/">
                     <button class="go-btn" type="button">GO</button>
                 </a>
             </div>
