--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="member-entry member5">
                 <img class="member-avatar" src="https://ui-avatars.com/api/?name=Quang+Trung&background=f6deb8&color=a0522d" alt="Quang Trung Avatar">
                 <span class="member-name">Quang Trung</span>
-                <a href="../member5/index.html">
+                <a href="https://trungnq7474.github.io/CV/">
                     <button class="go-btn" type="button">GO</button>
                 </a>
             </div>
